Implemented Box shape as well as its collision.

--- a/aieBootstrap-master/aieBootstrap-master/aieBootstrap-master/Physics Project/Physics Project.vcxproj.filters
+++ b/aieBootstrap-master/aieBootstrap-master/aieBootstrap-master/Physics Project/Physics Project.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Plane.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Box.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Physics_ProjectApp.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Plane.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Box.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
