Updates to several files and implemented border for the game along with game class. Collision bug found pending solution.

--- a/aieBootstrap-master/aieBootstrap-master/aieBootstrap-master/Physics Project/Physics Project.vcxproj
+++ b/aieBootstrap-master/aieBootstrap-master/aieBootstrap-master/Physics Project/Physics Project.vcxproj
@@ -164,6 +164,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="PhysicsScene.cpp" />
     <ClCompile Include="Physics_ProjectApp.cpp" />
@@ -175,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="PhysicsScene.h" />
     <ClInclude Include="Physics_ProjectApp.h" />
