--- a/PhysicsProjectUnity/Assembly-CSharp.Player.csproj
+++ b/PhysicsProjectUnity/Assembly-CSharp.Player.csproj
@@ -56,11 +56,12 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\CarScript.cs" />
     <Compile Include="Assets\Ragdoll.cs" />
     <Compile Include="Assets\Player.cs" />
-    <Compile Include="Assets\RagdollTrigger.cs" />
     <Compile Include="Assets\Spawner.cs" />
-    <Compile Include="Assets\CarScript.cs" />
+    <Compile Include="Assets\RagdollTrigger.cs" />
+    <Compile Include="Assets\Raycast.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
