Graphics Project: Added specular, diffusion, normal shader rendering with open test object

--- a/aieBootstrap-master/aieBootstrap-master/PhysicsProject/bin/imgui.ini
+++ b/aieBootstrap-master/aieBootstrap-master/PhysicsProject/bin/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Scene Light Settings]
-Pos=372,39
+Pos=320,-4
 Size=451,79
 Collapsed=0
 
@@ -34,22 +34,37 @@ Size=341,123
 Collapsed=0
 
 [Dragon Transform]
-Pos=852,511
-Size=394,160
+Pos=15,528
+Size=412,52
 Collapsed=0
 
 [Bunny Transform]
-Pos=97,134
-Size=179,122
+Pos=15,469
+Size=410,52
 Collapsed=0
 
 [Lucy Transform]
-Pos=92,313
-Size=336,161
+Pos=17,653
+Size=412,53
 Collapsed=0
 
 [Buddha Transform]
-Pos=505,358
-Size=348,108
+Pos=18,588
+Size=409,52
+Collapsed=0
+
+[Spear Transform]
+Pos=107,141
+Size=413,64
+Collapsed=0
+
+[Bread Transform]
+Pos=60,60
+Size=234,49
+Collapsed=0
+
+[Man Transform]
+Pos=126,348
+Size=557,57
 Collapsed=0
 
