--- a/aieBootstrap-master/aieBootstrap-master/PhysicsProject/bin/imgui.ini
+++ b/aieBootstrap-master/aieBootstrap-master/PhysicsProject/bin/imgui.ini
@@ -1,11 +1,11 @@
 [Debug]
-Pos=60,60
-Size=400,400
-Collapsed=0
+Pos=1023,567
+Size=243,132
+Collapsed=1
 
 [Scene Light Settings]
-Pos=320,-4
-Size=451,79
+Pos=874,398
+Size=512,171
 Collapsed=0
 
 [Bunny Position]
@@ -54,7 +54,7 @@ Size=409,52
 Collapsed=0
 
 [Spear Transform]
-Pos=107,141
+Pos=12,401
 Size=413,64
 Collapsed=0
 
@@ -64,7 +64,12 @@ Size=234,49
 Collapsed=0
 
 [Man Transform]
-Pos=126,348
-Size=557,57
+Pos=25,337
+Size=417,58
+Collapsed=0
+
+[Scene Directional Light Settings]
+Pos=56,53
+Size=594,125
 Collapsed=0
 
